# Info about this package.
[package]
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
edition = "2018"
readme  = "README.md"
name    = "nuttx-embedded-hal"
version = "1.0.10"
categories  = ["embedded", "hardware-support", "no-std"]
description = "Rust Embedded HAL for Apache NuttX RTOS"
keywords    = ["NuttX", "hal"]
license     = "Apache-2.0"
repository  = "https://github.com/lupyuen/nuttx-embedded-hal"

# External Rust libraries used by this module.  See crates.io.
[dependencies]
heapless     = "0.7.10"  # `static` friendly data structures that don't require dynamic memory allocation: https://crates.io/crates/heapless
embedded-hal = { version="0.2.7", features=["unproven"] }  # Embedded HAL: https://crates.io/crates/embedded-hal

# Optional features
[features]
default = []  # Default features
